fix aim-about overflow

--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -1,5 +1,8 @@
 .about 
-    margin-top: 170px
+    margin-top: 150px
+    background: #fff
+    position: relative
+    z-index: 2
     &__container
         padding-top: 80px
         display: flex
